docs/apache-airflow-providers-google/8.9.0/_sources/_api/airflow/providers/google/cloud/sensors/cloud_composer/index.rst.txt
:py:mod:`airflow.providers.google.cloud.sensors.cloud_composer`
===============================================================

.. py:module:: airflow.providers.google.cloud.sensors.cloud_composer

.. autoapi-nested-parse::

   This module contains a Cloud Composer sensor.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.sensors.cloud_composer.CloudComposerEnvironmentSensor




.. py:class:: CloudComposerEnvironmentSensor(*, project_id, region, operation_name, gcp_conn_id = 'google_cloud_default', delegate_to = None, impersonation_chain = None, pooling_period_seconds = 30, **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Check the status of the Cloud Composer Environment task

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param region: Required. The ID of the Google Cloud region that the service belongs to.
   :param operation_name: The name of the operation resource
   :param gcp_conn_id: The connection ID to use when fetching connection info.
   :param delegate_to: The account to impersonate, if any. For this to work, the service account making the
       request must have  domain-wide delegation enabled.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param pooling_period_seconds: Optional: Control the rate of the poll for the result of deferrable run.

   .. py:method:: execute(context)

      Airflow runs this method on the worker and defers using the trigger.


   .. py:method:: execute_complete(context, event = None)

      Callback for when the trigger fires - returns immediately.
      Relies on trigger to throw an exception, otherwise it assumes execution was
      successful.



